src/App.css
body {
  font-family: 'Lato', sans-serif;
  color: #4F4F4F;
  font-weight: 400;
}

.header-name {
  font-weight: bolder;
  margin: auto;
}

.top {
  position: absolute;
  top: 20px;
  left: 20%;
}

header {
  margin-bottom: 10%;
}

.content {
  width: 1000px;
  margin: auto;
}

.header {
  margin-bottom: 5%;
}

.project-main {
  margin: 0% 10% 0% 10%;
}

.about-main {
  margin: 0% 15% 5% 15%;
}

.writing-main {
  margin-left: 15%;
  margin-right: 15%;
}

.img-example {
  width: 775px;
}

.gif-container {
  justify-content: center;
}

.video-example, .gif-example {
  width: 250px;
  margin-left: auto;
  margin-right: auto;
}

h1 {
  margin-top: 20px;
  size: 200%;
}

h2 {
  font-weight: bold;
}

.writing-header-2 {
  font-weight: 200;
  font-size:  80%;
  color: #4F4F4F;
}

.writing-header-3 {
  font-weight: 800;
  color: gray;
  font-size: 80%;
}

.writing-date {
  margin-top:0px;
  color: gray;
  font-weight: 70%;
}

.publication {
  width:300px;
}

.write {
  width: 600px;
  margin-left: 5%;
  margin-top: 10px;
  font-weight:500;
}
a {
  text-decoration: none;
  color: #83AA75;
}

a:hover {
  color: rgb(29, 61, 28);
}

.row {
  display: flex;
  flex-direction: row;
}

.navigation-right {
  width:50px;
  font-size: 90%;
  font-weight: 110%;
  color: #4F4F4F;
  text-align: right;
  margin-right: 10%;
  margin-top: 3%;
}

.header-name {
  font-weight: bolder;
  margin-top: 10%;
  color: black;
}

.header-logo {
  margin-top: 5%;
}

.container {
  margin: auto;
}

.name-container {
  position: absolute;
  margin-left: 14px;
  margin-top: 7px;
}


.logo-container {
  position: absolute;
  justify-content: center;
}

.navigation-left {
  width:50px;
  font-size: 90%;
  font-weight: 110%;
  color: #4F4F4F;
  text-align: left;
  margin-left: 5%;
  margin-top: 3%;
}


.index {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
}

.item {
  margin: 10px;
}

.profile {
  width: 450px;
  margin:0px;
  margin-top:20px;
}

.icons {
  text-align: center;
  margin:10px;
}

.project {
  margin-right: 5%;
  margin-bottom: 5%;
}

.project-title {
  font-weight: bold;
}
.project-category {
  color: gray;
  font-size: 80%;
  margin-bottom: 5%;
}

.project-blurb {
  color: gray;
  font-size: 90%;
  font-weight: 300;
  width: 500px;
}

.blurb {
  font-size: 50%;
  color: #83AA75;
  margin-left: 13%;
}

.intro {
  text-align: left;
}

.short {
  padding-bottom: 0px;
  margin-bottom: 0px;
  height: 60px;
}

footer a {
  margin: 10px;
}

.col {
  display: flex;
  flex-direction: column;
}

img {
  display: inline-block;
  align-self: flex-start;
}

.design {
  font-size: 80%;
  margin-right: 50px;
  margin-bottom: 50px;
}

.project-image {
  width: 500px;
}

.cover {
  width: 350px;
}

.name {
  font-size: 150%;
  font-weight: 400;
  margin: 0% 30% 0% 30%;
}

/**
.nav {
  justify-content: flex-end;
  flex-grow: 1;
}*/


.br {
  margin-top: 10px;
  margin-bottom: 10px;
}

.center {
  width: 250%;
}

.venmo-p {
  margin-right: 50px;
}

.small {
  margin-right: 15px;
  margin-bottom: 15px;
}

.font-small {
  font-size: 70%;
  color: gray;
}

.made-by {
  text-align: center;
  font-weight: 300;
  font-size: 70%;
  color: rgb(119, 120, 120);
}

.center-align {
  justify-content: center;
}

/*
.button {
    font-family: 'Rubik', sans-serif;
    background: none;
    font-size: 120%;
    color: rgb(29, 61, 28);
    margin-left: 15px;
}

.drop-panel {
  display: none;
}

*/

.article-cover {
  width: 100%;
  margin: auto;
}

.article-title {
  font-size: 200%;
  font-weight: bold;
}

.details {
  margin: auto;
  font-size: 80%;
}

.detail {
  margin-right: 5%;
  width: 200px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

